--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="favicon.ico">
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         />
+		<!-- Bootstrap core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<!-- Custom styles for this template -->
+	<link href="css/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
         <title>aimc6594.app</title>
