--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <title>aimc6594.app</title>
 </head>
     <body style="height: 100vh; overflow: hidden">
-        <div id="root">
-            <body id="page-top">
+        <div id="root" class="page-top">
 		<!-- Navigation -->
 		<nav class="navbar navbar-default">
 			<div class="container">
